--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "advanced-discord-music-bot",
+  "name": "cosmos-music",
   "version": "3.0.0",
   "description": "Advanced discord music bot made by Sudhan for Coding With Sudhan 4k Views",
   "main": "index.js",
